# calendar-monitor

./: .env.example  .gitignore  Cargo.toml  Cross.toml  GOOGLE_OAUTH_SETUP_SIMPLE.md  ICS_CALENDAR_SETUP.md  INSTALLATION.md  LICENSE  README.md  TECHNICAL_DOCUMENTATION.md  TESTING.md  calendar-monitor.toml.example  install.sh
.github/workflows/: release.yml
docker/: Dockerfile.aarch64  Dockerfile.armv7
src/: calendar.rs  config.rs  google_calendar.rs  lib.rs  main.rs  meeting.rs
static/: app.js  style.css
templates/: index.html
tests/: calendar_tests.rs  config_tests.rs  google_calendar_tests.rs  meeting_tests.rs  mod.rs  oauth_integration_tests.rs
